--- a/xingjian/baselines/combine.ipynb
+++ b/xingjian/baselines/combine.ipynb
@@ -64,7 +64,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"done\")"
+   ]
   }
  ],
  "metadata": {
