Cond Image Gen(2): object + relation + global

--- a/xingjian/baselines/combine.ipynb
+++ b/xingjian/baselines/combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,15 +20,7 @@
       "loaded 5.npz\n",
       "appended 5.npz\n",
       "loaded 6.npz\n",
-      "appended 6.npz\n",
-      "loaded 7.npz\n",
-      "appended 7.npz\n",
-      "loaded 8.npz\n",
-      "appended 8.npz\n",
-      "loaded 9.npz\n",
-      "appended 9.npz\n",
-      "loaded 10.npz\n",
-      "appended 10.npz\n"
+      "appended 6.npz\n"
      ]
     }
    ],
@@ -37,14 +29,16 @@
     "\n",
     "# List your files here\n",
     "file_list = [\"1.npz\", \"2.npz\", \"3.npz\", \"4.npz\", \"5.npz\", \n",
-    "             \"6.npz\", \"7.npz\", \"8.npz\", \"9.npz\", \"10.npz\"]\n",
+    "             \"6.npz\"]\n",
+    "            #  \"6.npz\", \"7.npz\", \"8.npz\", \"9.npz\", \"10.npz\"]\n",
     "\n",
     "# This list will hold all the images\n",
     "all_images = []\n",
     "\n",
     "for file in file_list:\n",
     "    # Load each file\n",
-    "    path = \"/viscam/projects/ns-diffusion/dataset/clevr_rel_2objs_balanced_imgs/\"\n",
+    "    path = \"/viscam/projects/ns-diffusion/dataset/clevr_rel_2obj_partial_imgs/\"\n",
+    "    # path = \"/viscam/projects/ns-diffusion/dataset/clevr_rel_2objs_balanced_imgs/\"\n",
     "    data = np.load(path + file)\n",
     "    print(f\"loaded {file}\")\n",
     "\n",
@@ -56,7 +50,7 @@
     "all_images = np.concatenate(all_images, axis=0)\n",
     "\n",
     "# Save all images into one .npz file\n",
-    "np.savez(\"combined_file.npz\", images=all_images)\n"
+    "np.savez(path + \"combined_file.npz\", images=all_images)\n"
    ]
   },
   {
@@ -64,9 +58,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"done\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
